--- a/web/index.html
+++ b/web/index.html
@@ -14,22 +14,23 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/control/" />
+    <base href="$FLUTTER_BASE_HREF" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
+    <meta name="description" content="Sistema de Control de Acceso con QR" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="control" />
+    <meta name="apple-mobile-web-app-title" content="Control de Acceso" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>control</title>
+    <title>Control de Acceso</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
